--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,13 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Burgers!</title>
+	<title>Eat-Da-Burger!</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> 
-	<link rel="stylesheet" href="script.css">
+	<link rel="stylesheet" href="assets/css/burger_style.css">
 
 	{{!-- <script src=""></script> --}}
 </head>
 <body>
-		{{{ body }}}
+		
+	{{!-- <div class="container-fluid">
+		<div class ="row"> --}}
+			{{!-- <img src="assets/img/burger.png" class="img-fluid" alt="Cheeseburger"> --}}
+			{{!-- <img src="assets/img/burger.png" class="img" alt="Cheeseburger"> --}}
+			<h1>Eat-Da-Burger!</h1>
+		{{!-- </div> --}}
+			{{{ body }}}
+	{{!-- </div> --}}
+			
 </body>
 </html>
