--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Eat-Da-Burger!</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> 
-	<link rel="stylesheet" href="assets/css/burger_style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	{{!-- <script src=""></script> --}}
+		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
+
+		<title>Eat-Da-Burger!</title>
+
+		<script src="https://code.jquery.com/jquery.js"></script>
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> 
+
+		<script src="/assets/js/burger.js"></script>
 </head>
 <body>
 		
