--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,26 +4,26 @@
 	<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css"/>
+		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 
 		<title>Eat-Da-Burger!</title>
 
 		<script src="https://code.jquery.com/jquery.js"></script>
 
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> 
+		 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
 
 		<script src="/assets/js/burger.js"></script>
+	<style>
+		body {
+			background-color:	#f3cc60;
+		};
+	</style>
+	
+
 </head>
 <body>
-		
-	{{!-- <div class="container-fluid">
-		<div class ="row"> --}}
-			{{!-- <img src="assets/img/burger.png" class="img-fluid" alt="Cheeseburger"> --}}
-			{{!-- <img src="assets/img/burger.png" class="img" alt="Cheeseburger"> --}}
-		
-		{{!-- </div> --}}
-			{{{ body }}}
-	{{!-- </div> --}}
+
+	{{{ body }}}
 			
 </body>
 </html>
