--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19,19 +19,23 @@ h1 {
   padding-bottom: 20px;
 }
 
-.devourBtn{
-    background-color: red;
+h2 {
+    color:red;
+    padding-top:20px;
+    text-align: center;
 }
 
-#burgers .col-6 {
-    font-size: large;
-    color: green;
+.center{
+    text-align: center;
+    padding-bottom:20px;
+    padding-left:200px;
+    
 }
 
 form {
     text-align: center;
     text-align: center;
-    font-size: 25px;
+    font-size: 20px;
     padding-top:5px;
 
 }
