--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
 
   <div class="row">
     <div class="col-6 center">
-      <h2>Burgers!</h2>
+      <h2>Ordered Burgers!</h2>
 
       {{#each burger}}
         {{#unless devoured}}
